# zygoat-gf

./: .gitignore  README.md  notes.org  pyproject.toml
.github/workflows/: ci.yml
tests/: conftest.py
tests/cli/: test_cli.py  test_new.py
tests/executors/: test_docker.py
tests/plans/git/: test_ignore.py
tests/utils/: __init__.py  test_find_nearest.py  test_inject_file_contents.py  test_resource_file_contents.py  test_use_dir.py
zygoat/cli/: __init__.py  new.py
zygoat/executors/: __init__.py  base.py  docker.py
zygoat/plans/: __init__.py  backend.py  default.py  frontend.py
zygoat/plans/backend/: __init__.py  black.py  docker.py  gunicorn.py  settings.py
zygoat/plans/frontend/: __init__.py  eslint.py  prettier.py  utils.py
zygoat/plans/git/: __init__.py  ignore.py
zygoat/resources/: Caddyfile  docker-compose.yml
zygoat/resources/backend/: Dockerfile  Dockerfile.local  gunicorn.conf.py
zygoat/resources/backend/backend/: settings.py
zygoat/resources/frontend/: .eslintrc.js  Dockerfile  Dockerfile.local
zygoat/scripts/: docs.py  watch.py
zygoat/utils/: __init__.py  find_nearest.py  inject_file_contents.py  inject_resource_file.py  resource_file_contents.py  use_dir.py
zygoat/utils/docker/: compose.py
