[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "zygoat"
version = "0.1.0"
description = ""
authors = [ "Aria Taylor <ari@willing.com>",]
readme = "README.md"

[tool.black]
line-length = 95
target-version = [ "py39",]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pdoc = "^13.0.0"
flake8 = "^6.0.0"
black = "^23.1.0"
flake8-black = "^0.3.6"
pytest = "^7.2.1"
