[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "zygoat"
version = "0.1.0"
description = ""
authors = [ "Aria Taylor <ari@willing.com>",]
readme = "README.md"

[tool.black]
line-length = 95
target-version = [ "py39",]


[tool.poetry.extras]
test = ["watchfiles"]

[tool.poetry.scripts]
zygoat = "zygoat.cli:cli"
watch = { callable = "zygoat.scripts.watch:watch", extras = ["test"] }

[tool.poetry.dependencies]
python = "^3.11"
docker = "^6.0.1"
click = "^8.1.3"
loguru = "^0.6.0"
watchfiles = { version = "^0.18.1", optional = true }

[tool.poetry.group.dev.dependencies]
pdoc = "^13.0.0"
flake8 = "^6.0.0"
black = "^23.1.0"
flake8-black = "^0.3.6"
pytest = "^7.2.1"
faker = "^17.3.0"
