[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "zygoat"
version = "0.1.0"
description = ""
authors = [ "Aria Taylor <ari@willing.com>",]
readme = "README.md"

[tool.black]
line-length = 95
target-version = [ "py39",]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "serial",
]

[tool.poetry.extras]
development = ["watchfiles", "bpython", "pdoc"]

[tool.poetry.scripts]
zygoat = "zygoat.cli:cli"
watch = { callable = "zygoat.scripts.watch:watch", extras = ["development"] }
docs = { callable = "zygoat.scripts.docs:docs", extras = ["development"] }

[tool.poetry.dependencies]
python = "^3.9"
docker = "^6.0.1"
click = "^8.1.3"
loguru = "^0.6.0"
watchfiles = { version = "^0.18.1", optional = true }
pdoc = { version = "^13.0.0", optional = true }
bpython = { version = "^0.24", optional = true }

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.1.0"
flake8-black = "^0.3.6"
pytest = "^7.2.1"
faker = "^17.3.0"
flake8-docstrings = "^1.7.0"
